// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`manage-projects tool creating a new project should create a project and return mapped result 1`] = `
"Created project: test-abc123def456-project • id=6cfCcrrCFg2xP94Q
Next:
- Use manage-sections to organize this project with sections
- Use add-tasks to add your first tasks
- Use get-overview with projectId to see updated project structure."
`;

exports[`manage-projects tool creating a new project should handle different project properties from API 1`] = `
"Created project: My Blue Project • id=project-456
Next:
- Use manage-sections to organize this project with sections
- Use add-tasks to add your first tasks
- Use get-overview with projectId to see updated project structure."
`;

exports[`manage-projects tool updating an existing project should update a project when id is provided 1`] = `
"Updated project: Updated Project Name • id=existing-project-123
Next:
- Use get-overview with projectId=existing-project-123 to see project structure
- Use find-projects to see all projects with updated name
- Use find-tasks with projectId=existing-project-123 to review existing tasks"
`;
